# My_note

./: .coverage  .coveragerc  .dockerignore  .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
my_note/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
my_note/migrations/: 0001_initial.py  0002_initial.py  0003_remove_note_image_alter_note_content_noteimage.py  0004_alter_note_options.py
my_note/templates/my_note/: base.html  home.html  note_confirm_delete.html  note_create.html  note_detail.html  note_form.html  note_list.html
users/: admin.py  forms.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_alter_user_options_user_tg_chat_id_and_more.py
users/templates/users/: login.html  profile.html  profile_edit.html  register.html
users/templatetags/: users_tags.py
